added icons, killathea, mariospol, taratsaparadeisou and akatalogistoi.

--- a/KCHC/MainPage.xaml
+++ b/KCHC/MainPage.xaml
@@ -2,15 +2,18 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="KCHC.MainPage">
-    <CollectionView ItemsSource="{Binding Artists}">
-        <CollectionView.ItemTemplate>
-            <DataTemplate>
-                <StackLayout Padding="10">
-                    <Image Source="{Binding PhotoPath}" HeightRequest="100" WidthRequest="100" Aspect="AspectFill"/>
-                    <Label Text="{Binding Name}" FontAttributes="Bold" FontSize="16"/>
-                    <Label Text="{Binding Description}" FontSize="14"/>
-                </StackLayout>
-            </DataTemplate>
-        </CollectionView.ItemTemplate>
-    </CollectionView>
+    <Grid VerticalOptions="CenterAndExpand">
+        <Image Source="kchc.ico" HeightRequest="300" Aspect="AspectFill"/>
+        <CarouselView ItemsSource="{Binding Artists}" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand">
+            <CarouselView.ItemTemplate>
+                <DataTemplate>
+                    <StackLayout Padding="10" VerticalOptions="CenterAndExpand">
+                        <Image Source="{Binding PhotoPath}" HeightRequest="300" Aspect="AspectFill" VerticalOptions="CenterAndExpand"/>
+                        <Label Text="{Binding Name}" FontAttributes="Bold" FontSize="24" TextColor="White" HorizontalOptions="Center"/>
+                        <Label Text="{Binding Description}" FontSize="18" TextColor="White" HorizontalOptions="Center"/>
+                    </StackLayout>
+                </DataTemplate>
+            </CarouselView.ItemTemplate>
+        </CarouselView>
+    </Grid>
 </ContentPage>
