--- a/KCHC/App.xaml
+++ b/KCHC/App.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="KCHC.App">
     <Application.Resources>
-
+        <Style TargetType="NavigationPage">
+            <Setter Property="BarBackgroundColor" Value="Black" />
+        </Style>
     </Application.Resources>
 </Application>
