--- a/KCHC/ArtistPage.xaml
+++ b/KCHC/ArtistPage.xaml
@@ -19,7 +19,7 @@
                             <Label Text="{Binding ExtraDescription}" FontSize="18" HorizontalOptions="Center" VerticalOptions="EndAndExpand" Margin="10" LineBreakMode="WordWrap" />
                         </StackLayout>
                     </StackLayout>
-                    <Grid x:Name="GridForConnections" HeightRequest="40" VerticalOptions="End" Grid.Row="1" />
+                    <Grid x:Name="GridForConnections" HeightRequest="40" VerticalOptions="End" Grid.Row="1" Margin="0,0,0,5" />
 
                     <Grid.GestureRecognizers>
                         <SwipeGestureRecognizer Swiped="OnSwipe" Direction="Right" />
