Oi allages pou kanme mazi sthn discord klish

--- a/KCHC/MainPage.xaml
+++ b/KCHC/MainPage.xaml
@@ -16,14 +16,14 @@
                 <CarouselView x:Name="ArtistsCarousel" ItemsSource="{Binding}" HorizontalOptions="Fill" VerticalOptions="FillAndExpand" InputTransparent="True">
                     <CarouselView.ItemTemplate>
                         <DataTemplate>
-                            <StackLayout Padding="10" VerticalOptions="CenterAndExpand">
+                            <StackLayout Padding="10" VerticalOptions="StartAndExpand">
                                 <Image Source="{Binding PhotoPath}" HeightRequest="300" Aspect="AspectFit" VerticalOptions="CenterAndExpand">
                                     <Image.GestureRecognizers>
                                         <TapGestureRecognizer Tapped="OnImageTapped" />
                                     </Image.GestureRecognizers>
                                 </Image>
-                                <Label Text="{Binding Name}" FontAttributes="Bold" FontSize="30" TextColor="White" HorizontalOptions="CenterAndExpand"/>
-                                <Label Text="{Binding Description}" FontSize="18" TextColor="White" HorizontalOptions="Center"/>
+                                <Label Text="{Binding Name}" FontAttributes="Bold" FontSize="30" TextColor="White" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"/>
+                                <Label Text="{Binding Description}" FontSize="20" TextColor="White" HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand"/>
                             </StackLayout>
                         </DataTemplate>
                     </CarouselView.ItemTemplate>
