--- a/KCHC/ArtistPage.xaml
+++ b/KCHC/ArtistPage.xaml
@@ -10,16 +10,18 @@
                         <RowDefinition Height="60" />
                         <!-- Row for Connections -->
                     </Grid.RowDefinitions>
-                    <StackLayout x:Name="StackAll" VerticalOptions="FillAndExpand">
-                        <Image x:Name="ImageArtist" Source="kchc.ico" HeightRequest="150" Aspect="AspectFit" VerticalOptions="Start"/>
-                        <StackLayout x:Name="GridForData" VerticalOptions="Fill" Spacing="30">
-                            <!-- Artist Name -->
-                            <Label Text="{Binding Name}" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Start"/>
-                            <!-- Artist Description -->
-                            <Label Text="{Binding ExtraDescription}" FontSize="18" HorizontalOptions="Center" VerticalOptions="EndAndExpand" Margin="10" LineBreakMode="WordWrap" />
-                        </StackLayout>
-                    </StackLayout>
-                    <Grid x:Name="GridForConnections" HeightRequest="40" VerticalOptions="End" Grid.Row="1" Margin="0,0,0,5" />
+            <StackLayout x:Name="StackAll" VerticalOptions="FillAndExpand">
+                <Image x:Name="ImageArtist" Source="kchc.ico" HeightRequest="150" Aspect="AspectFit" VerticalOptions="Start"/>
+                <StackLayout x:Name="GridForData" VerticalOptions="Fill" Spacing="30">
+                    <!-- Artist Name -->
+                    <Label Text="{Binding Name}" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Start"/>
+                    <!-- Artist Description -->
+                    <Label Text="{Binding ExtraDescription}" FontSize="18" HorizontalOptions="Center" VerticalOptions="EndAndExpand" Margin="10" LineBreakMode="WordWrap" />
+                </StackLayout>
+            </StackLayout>
+
+            <Grid x:Name="GridForMusic" HeightRequest="60" VerticalOptions="EndAndExpand"/>
+            <Grid x:Name="GridForConnections" HeightRequest="40" VerticalOptions="End" Grid.Row="1" Margin="0,0,0,5" />
 
                     <Grid.GestureRecognizers>
                         <SwipeGestureRecognizer Swiped="OnSwipe" Direction="Right" />
