--- a/KCHC/MainPage.xaml
+++ b/KCHC/MainPage.xaml
@@ -6,7 +6,11 @@
     <Grid>
         <Image Source="kchc.ico" HeightRequest="300" Aspect="AspectFill"/>
         <Grid>
-            <Button x:Name="KinimatoramaButton" ImageSource="Kinimatorama.jpg" HorizontalOptions="End" VerticalOptions="Start" Clicked="OnKinimatoramaImageClicked"></Button>
+            <StackLayout Orientation="Horizontal" VerticalOptions="Start">
+                <!-- String to display "Thanatis Version" -->
+                <Label Text="Thanatis Version" FontSize="20" TextColor="Pink" HorizontalOptions="Start" VerticalOptions="Center" />
+                <Button x:Name="KinimatoramaButton" ImageSource="Kinimatorama.jpg" HorizontalOptions="End" VerticalOptions="Start" Clicked="OnKinimatoramaImageClicked"/>
+            </StackLayout>
             <Grid VerticalOptions="CenterAndExpand">
                 <!-- Custom Indicator Layout -->
                 <StackLayout x:Name="CustomIndicator" Orientation="Horizontal" HorizontalOptions="CenterAndExpand" VerticalOptions="End" HeightRequest="5">
